--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,24 @@
 {
-    "editor.tabSize": 4,
-    "liveSassCompile.settings.formats":[
+    "liveSassCompile.settings.formats": [
         {
             "format": "expanded",
             "extensionName": ".css",
             "savePath": "~/"
         },
-
-        // optional: add more outputs ...
-
-    ], 
+        {
+            "extensionName": ".min.css",
+            "format": "compressed",
+            "savePath": "~/"
+        }
+    ],
+    "liveSassCompile.settings.excludeList": [
+        "**/node_modules/**",
+        ".vscode/**"
+    ],
+    "liveSassCompile.settings.generateMap": false,
+    //autoprefix, will auto add perfix like -webkit- -moz-..
+    "liveSassCompile.settings.autoprefix": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
